[gd_scene load_steps=12 format=2]

[ext_resource path="res://Monster_ghost.gd" type="Script" id=1]
[ext_resource path="res://assets/LPC Base Assets/sprites/monsters/ghost_single.png" type="Texture" id=2]
[ext_resource path="res://assets/speech_bubble_complain.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/pf_tempesta_five_condensed.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/speech_bubble3.png" type="Texture" id=5]
[ext_resource path="res://assets/LPC Base Assets/sprites/monsters/ghost_tiles/tile003.png" type="Texture" id=6]
[ext_resource path="res://assets/LPC Base Assets/sprites/monsters/ghost_tiles/tile004.png" type="Texture" id=7]
[ext_resource path="res://assets/LPC Base Assets/sprites/monsters/ghost_tiles/tile005.png" type="Texture" id=8]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 12.5045
height = 20.0

[sub_resource type="DynamicFont" id=2]

size = 11
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Ghost" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 2 )

[node name="ghost_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="speech bubble complain" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( 44.9712, -56.2948 )
z_index = 2
texture = ExtResource( 3 )
_sections_unfolded = [ "Z Index" ]

[node name="Label2" type="Label" parent="speech bubble complain" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -40.0
margin_right = 33.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Could you
please turn
the music
back on?"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="speech bubble" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( 33.8577, -44.8517 )
z_index = 1
texture = ExtResource( 5 )
_sections_unfolded = [ "Z Index" ]

[node name="Label" type="Label" parent="speech bubble" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -31.0
margin_top = -28.0
margin_right = 34.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I'm sorry,
I didn't see
you"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Ghost_floating" type="AnimatedSprite" parent="." index="5"]

frames = SubResource( 3 )
animation = "default"
frame = 2
playing = true

[node name="complain timer" type="Timer" parent="." index="6"]

process_mode = 0
wait_time = 1.5
one_shot = false
autostart = false

[connection signal="timeout" from="ghost_timer" to="." method="_on_bubble_timer_timeout"]

[connection signal="timeout" from="complain timer" to="." method="_on_complain_timer_timeout"]


